--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "devDependencies": {
     "@faker-js/faker": "^6.0.0-beta.0",
     "cypress": "9.5.4",
+    "moment": "^2.29.3",
     "pg": "^8.7.3"
   }
 }
